# live-sub

./: .gitignore  CLAUDE.md  README.md  start.sh
.claude/agents/: db-agent.md  design-agent.md  flow-validator-agent.md  frontend-agent.md  ideation-agent.md  planning-agent.md  qa-agent.md  requirements-validator-agent.md
.claude/commands/: start-dev.md  start-ideation.md
backend/: .env.example  conftest.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: health.py  sessions.py  translate.py
backend/tests/: test_health.py  test_sessions.py  test_translate.py
docs/: .pipeline-state.json  api-spec.json  api-spec.md  bug-report.md  data-model.json  data-model.md  dev-plan.md  flow-validation-report.md  ideation-decisions.md  ideation-research.md  lessons-backend.md  lessons-frontend.md  lessons-qa.md  qa-report.md  requirements-validation-report.md  requirements.md  service-flow.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BrowserNotSupported.tsx  LanguageSelector.tsx  MicButton.tsx  SettingsPanel.tsx  StatusIndicator.tsx  Toast.tsx  TranslationDisplay.tsx
frontend/src/hooks/: useSettings.ts  useSpeechRecognition.ts
frontend/src/lib/: api.ts  types.ts
